--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build && cp build/index.html build/404.html"
   },
   "eslintConfig": {
     "extends": [
@@ -52,5 +54,6 @@
   "devDependencies": {
     "@types/react-helmet": "^6.1.5",
     "@types/styled-components": "^5.1.25"
-  }
+  },
+  "homepage": "https://the-new-kim.github.io/react-netflix-clone2/"
 }
