--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "framer-motion": "^6.3.11",
+    "gh-pages": "^4.0.0",
     "popmotion": "^11.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
