--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-netflix-clone2",
+  "name": "netflix-clone",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -57,5 +57,5 @@
     "@types/react-helmet": "^6.1.5",
     "@types/styled-components": "^5.1.25"
   },
-  "homepage": "https://the-new-kim.github.io/react-netflix-clone2/"
+  "homepage": "https://the-new-kim.github.io/netflix-clone/"
 }
